fixed spacing between squares

--- a/public/css/stylesheet.css
+++ b/public/css/stylesheet.css
@@ -88,8 +88,7 @@ img {
   width: 150px;
   height: 150px;
   z-index: 1;
-  margin: 4px;
-  margin-bottom: 4px;
+  margin-bottom: 7px;
 }
 
 .top-left-flipper, .top-center-flipper, .top-right-flipper, .center-left-flipper, .center-right-flipper, .bottom-left-flipper, .bottom-center-flipper, .bottom-right-flipper {
